--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Heart Animation (HTML/CSS/JS - Dựa trên Python gốc)</title>
+    <title>Form HLong with luv</title>
     <style>
         body {
             margin: 0;
